<resources>
    <string name="app_name">Nail Polish Database</string>
    <string name="button_viewdatabase">View Nail Polish Database</string>
    <string name="button_addnailpolish">Add new Nail Polish</string>
    <string name="button_addpolish2db">Add Nail Polish to database</string>
    <string name="toolbar_search">Search</string>
    <string name="switch_designcolor">Change Design Light/Dark</string>

    <string-array name="npcolor_arrays">
        <item>Select a color</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Black</item>
        <item>Purple</item>
        <item>Grey</item>
    </string-array>

    <string-array name="npfinish_arrays">
        <item>Select a finish</item>
        <item>Matte</item>
        <item>Gloss</item>
        <item>Cream</item>
        <item>Jelly</item>
        <item>Glitter</item>
        <item>Shimmer</item>
        <item>Metallic</item>
        <item>Glow in the Dark</item>
        <item>Crackle</item>
        <item>Magnetic</item>
    </string-array>
    <string name="alert_delete_title">Delete Nail Polish?</string>
    <string name="alert_delete_message">All data of this Nail Polish will be lost!</string>
    <string name="toolbar_title_main">Nail Polish Database</string>
    <string name="toolbar_title_addnew">Add new Nail Polish</string>
    <string name="edittext_hint_name">Name</string>
    <string name="edittext_hint_quantity">Quantity</string>
    <string name="edittext_hint_brand">Brand</string>
    <string name="edittext_hint_collection">Collection</string>
    <string name="toolbar_title_details">Nail Polish Details</string>
    <string name="textview_color">Color:</string>
    <string name="textview_finish">Finish:</string>
    <string name="button_delete_nailpolish">Delete</string>
    <string name="button_edit_nailpolish">Edit</string>
    <string name="textview_quantity">Quantity:</string>
    <string name="textview_brand">Brand:</string>
    <string name="textview_collection">Collection:</string>
    <string name="edittext_hint_color">Color</string>
    <string name="edittext_hint_finish">Finish</string>
    <string name="toolbar_title_edit">Edit Nail Polish</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="menu_item_settings">Settings</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="preference_title_npcount">Nail Polishes in Database</string>
    <string name="button_save_changes">Save Changes</string>
</resources>
