<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- todo: thumbnail nail polish -->

    <!-- Information-->
    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5sp"
        android:text="@string/edittext_hint_name"
        android:textAllCaps="false"
        android:textColor="#343434"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/brand_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_tv"
        android:layout_alignStart="@+id/name_tv"
        android:layout_below="@+id/name_tv"
        android:paddingTop="5sp"
        android:text="@string/edittext_hint_brand"
        android:textColor="#343434"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/color_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/brand_tv"
        android:layout_alignStart="@+id/brand_tv"
        android:layout_below="@+id/brand_tv"
        android:paddingTop="5dip"
        android:text="@string/edittext_hint_color"
        android:textColor="#343434"
        android:textSize="15sp" />

</RelativeLayout>