<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nailpolish.nailpolishdb.AddNew"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <!-- TOOLBAR -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_title_addnew"
        app:titleTextColor="@android:color/background_light"
        app:theme="@style/ToolbarColoredBackArrow" />


    <!-- NAME -->
    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/edittext_hint_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <!-- ID -->
    <EditText
        android:id="@+id/editText_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edittext_hint_quantity"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_finish" />


    <!-- BRAND -->
    <EditText
        android:id="@+id/editText_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/edittext_hint_brand"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_name"
        app:layout_constraintHorizontal_bias="1.0" />


    <!-- COLLECTION -->
    <EditText
        android:id="@+id/editText_collection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/edittext_hint_collection"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_brand"
        app:layout_constraintHorizontal_bias="1.0" />


    <!-- COLOR -->
    <Spinner
        android:id="@+id/spinner_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:spinnerMode="dialog"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_collection"
        app:layout_constraintHorizontal_bias="1.0" />

    <!-- todo: adjust style of spinner -->
    <!-- FINISH -->
    <Spinner
        android:id="@+id/spinner_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:spinnerMode="dialog"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_color" />


    <!-- BUTTON AD NAILPOLISH 2 DB -->
    <Button
        android:id="@+id/button_addnp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="297dp"
        android:layout_height="64dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_addpolish2db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.507" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="77dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_action_addphoto"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_quantity"
        app:layout_constraintRight_toLeftOf="@+id/imageView_addnew"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_addnew"
        android:layout_width="132dp"
        android:layout_height="104dp"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        android:layout_marginRight="135dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_quantity" />

</android.support.constraint.ConstraintLayout>
